--- a/framework/cordova.gradle
+++ b/framework/cordova.gradle
@@ -18,8 +18,16 @@
 */
 
 import java.util.regex.Pattern
-import groovy.swing.SwingBuilder
-import com.g00fy2.versioncompare.Version
+import io.github.g00fy2.versioncompare.Version
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'io.github.g00fy2:versioncompare:1.4.1'
+    }
+}
 
 String doEnsureValueExists(filePath, props, key) {
     if (props.get(key) == null) {
@@ -31,8 +39,8 @@ String doEnsureValueExists(filePath, props, key) {
 String doGetProjectTarget() {
     def props = new Properties()
     def propertiesFile = 'project.properties';
-    if(!(file(propertiesFile).exists())) {
-      propertiesFile = '../project.properties';
+    if (!(file(propertiesFile).exists())) {
+        propertiesFile = '../project.properties';
     }
     file(propertiesFile).withReader { reader ->
         props.load(reader)
@@ -55,10 +63,10 @@ String doFindLatestInstalledBuildTools(String minBuildToolsVersionString) {
     }
 
     def highestBuildToolsVersion = buildToolsDirContents
-        .collect { new Version(it) }
-        // Invalid inputs will be handled as 0.0.0
-        .findAll { it.isHigherThan('0.0.0') }
-        .max()
+            .collect { new Version(it) }
+    // Invalid inputs will be handled as 0.0.0
+            .findAll { it.isHigherThan('0.0.0') }
+            .max()
 
     if (highestBuildToolsVersion == null) {
         throw new RuntimeException("""
@@ -110,7 +118,7 @@ String getAndroidSdkDir() {
     }
     if (androidSdkDir == null) {
         throw new RuntimeException(
-            "Unable to determine Android SDK directory.")
+                "Unable to determine Android SDK directory.")
     }
     androidSdkDir
 }
@@ -167,14 +175,4 @@ ext {
     cdvHelpers.getConfigXml = { doGetConfigXml() }
     // Returns the value for the desired <preference>. Added in 4.1.0.
     cdvHelpers.getConfigPreference = { name, defaultValue -> doGetConfigPreference(name, defaultValue) }
-}
-
-buildscript {
-    repositories {
-        jcenter()
-    }
-
-    dependencies {
-        classpath 'com.g00fy2:versioncompare:1.3.4@jar'
-    }
 }
